# Transformer-QG-on-DRCD

./: README.md  export_ckpt_to_hf.py  pyproject.toml  requirements.txt  train_seq2seq_lm.py
hf_model/: README.md
models/seq2seq_lm/: argparser.py  config.py  data_module.py  model.py  tokenizer.py
utils/: server.py
