[tool.poetry]
name = "transformer-qg-on-drcd"
version = "0.1.0"
description = ""
authors = ["Philip Huang <p208p2002@gmail.com>"]
readme = "README.md"
packages = [{include = "transformer_qg_on_drcd"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
